two-column layout classes

--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
         <img src="assets/arrow-right-dark.svg" alt="">
     </button>
 
+    <div class="section-container">
+        <div class="two-column">
+            <p class="col-left">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque obcaecati nulla porro
+                quam explicabo beatae sequi eum facere eaque magnam nobis nam perferendis inventore nihil, aut earum
+                blanditiis eligendi laborum!</p>
+            <p class="col-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex provident itaque
+                perferendis exercitationem ipsum voluptate est voluptatibus libero nobis? Voluptates eum, natus iure ut
+                consequatur cum ab! Nesciunt, quia tempora?</p>
+        </div>
+    </div>
+
 
 </body>
 
