styling two-page hero

--- a/index.html
+++ b/index.html
@@ -27,46 +27,35 @@
         </ul>
         <button class="primary-button navbar-button">Sign In</button>
     </nav>
-
-
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
-    <a href="">Click Me</a>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos assumenda odio aliquid ea. Sint, eaque sunt
-        libero, repudiandae ducimus quasi doloribus rerum nesciunt tenetur tempora, eveniet optio molestias similique?
-    </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quos assumenda odio aliquid ea. Sint, eaque sunt
-        libero, repudiandae ducimus quasi doloribus rerum nesciunt tenetur tempora, eveniet optio molestias similique?
-    </p>
-
-    <p class="secondary-text"> Lorem blah blah blah</p>
-
-    <p class="subtitle">I am subtitle</p>
-    <p class="subtitle2">I am subtitle</p>
-    <button class="primary-button">Click Me!</button>
-    <button class="secondary-button">Click Me!</button>
-
-    <button class="primary-button with-icon">Click Me!
-        <img src="assets/arrow-right-light.svg" alt="">
-    </button>
-    <button class="secondary-button with-icon">Click Me!
-        <img src="assets/arrow-right-dark.svg" alt="">
-    </button>
-
-    <div class="section-container">
-        <div class="two-column">
-            <p class="col-left">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque obcaecati nulla porro
-                quam explicabo beatae sequi eum facere eaque magnam nobis nam perferendis inventore nihil, aut earum
-                blanditiis eligendi laborum!</p>
-            <p class="col-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex provident itaque
-                perferendis exercitationem ipsum voluptate est voluptatibus libero nobis? Voluptates eum, natus iure ut
-                consequatur cum ab! Nesciunt, quia tempora?</p>
+    <main>
+        <div class="hero">
+            <div class="section-container two-column">
+                <div class="col-left">
+                    <h1>Payment infrastructures for the world</h1>
+                    <p>Global payment infrastructures enable secure and seamless financial transactions, connecting
+                        people
+                        and businesses worldwide. By embracing digital solutions...</p>
+                    <div class="button-container">
+                        <button class="primary-button with-icon">
+                            Start now
+                            <img src="assets/arrow-right-light.svg" alt="">
+                        </button>
+                        <button class="secondary-button with-icon">
+                            Start now
+                            <img src="assets/arrow-right-purple.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+                <div class="col-right hero-phone-container">
+                    <img class="hero-phone" src="assets/hero-phone.png" alt="">
+                </div>
+            </div>
         </div>
-    </div>
+    </main>
+
+
+
+
 
 
 </body>
