--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
             <div class="section-container two-column">
                 <div class="col-left">
                     <h1>Payment infrastructures for the world</h1>
-                    <p>Global payment infrastructures enable secure and seamless financial transactions, connecting
-                        people
-                        and businesses worldwide. By embracing digital solutions...</p>
+                    <p>Tons of companies all over the world use Swipe’s seamless platform to manage their businesses's
+                        entire financial transaction infrastructure online.
+
+                    </p>
                     <div class="button-container">
                         <button class="primary-button with-icon">
                             Start now
                             <img src="assets/arrow-right-light.svg" alt="">
                         </button>
                         <button class="secondary-button with-icon">
-                            Start now
+                            Contact sales
                             <img src="assets/arrow-right-purple.svg" alt="">
                         </button>
                     </div>
@@ -51,13 +52,46 @@
                 </div>
             </div>
         </div>
+        <div class="partners-section">
+            <div class="section-container">
+                <div class="partners-grid">
+                    <img src="assets/instacart.png" alt="Instacart">
+                    <img src="assets/salesforce.png" alt="Salesforce">
+                    <img src="assets/amazon.png" alt="Amazon">
+                    <img src="assets/slack.png" alt="Slack">
+                    <img src="assets/shopify.png" alt="Shopify">
+                    <img src="assets/google.png" alt="Google">
+                    <img src="assets/lyft.png" alt="Lyft">
+                    <img src="assets/zoom.png" alt="Zoom">
+                </div>
+            </div>
+        </div>
+        <!-- UNIFIED PLATFORM -->
+        <div class="unified-platform-section section-container">
+            <p class="subtitle">Unified platform</p>
+            <h2>All the payment products you'll ever need</h2>
+
+            <div class="two-column">
+                <div class="col-left">
+                    <p>We've got everything you'll need and more to build websites and apps that handle payments,
+                        payouts, and much more. Swipe’s products power payments for
+                        <a href="#">all kinds of retailers</a>, <a href="#">all kinds of
+                            businesses</a>, <a href="#">oftware platforms & marketplaces</a>, and everything in between.
+                    </p>
+                </div>
+                <div class="col-right">
+                    <p>We also help companies <a href="#">tackle fraud</a>, <a href="#">issue invoices</a>, <a
+                            href="#">send virtual</a> and <a href="#">physical cards</a>, <a href="#">manage
+                            financing</a>, <a href="#">wrangle business spend</a>, and much more.
+                    </p>
+                </div>
+            </div>
+            <button class="primary-button with-icon">
+                Start now
+                <img src="assets/arrow-right-light.svg" alt="">
+            </button>
+        </div>
     </main>
-
-
-
-
-
-
 </body>
 
 </html>
