--- a/index.html
+++ b/index.html
@@ -91,6 +91,102 @@
                 <img src="assets/arrow-right-light.svg" alt="">
             </button>
         </div>
+        <div class="graphic-section">
+            <div class="section-container">
+                <div class="graphic-grid">
+                    <img src="assets/credit-card.png" alt="" id="credit-card">
+                    <img src="assets/slack-invoice.png" alt="" id="slack-invoice">
+                    <img src="assets/phone.png" alt="" id="phone">
+                    <img src="assets/dash.png" alt="" id="dash">
+                </div>
+            </div>
+        </div>
+        <!-- Integration Section -->
+        <div class="integrations-section">
+            <div class="section-container two-column">
+                <div class="col-left">
+                    <p class="subtitle2">Design For Engineers</p>
+                    <h2>The world's best and most intuitive APIs</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, voluptatum dolore. Ipsum obcaecati
+                        fuga placeat, ex debitis ipsa voluptate laborum ea architecto quae nobis eum eos dicta veniam,
+                        omnis asperiores.</p>
+
+                    <button class="primary-button with-icon">
+                        Start now
+                        <img src="assets/arrow-right-dark.svg" alt="">
+                    </button>
+                    <div class="card-container">
+                        <div class="card">
+                            <img src="assets/tools-icon.png" alt="" class="icon">
+                            <h3>Tools for all stacks</h3>
+                            <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quasi
+                                nesciunt ipsum voluptatum numquam animi nisi cumque, illo sed ea?</p>
+                            <button class="secondary-button with-icon">
+                                See libraries
+                                <img src="assets/arrow-right-blue.svg" alt="">
+                            </button>
+                        </div>
+                        <div class="card">
+                            <img src="assets/cube-icon.png" alt="" class="icon">
+                            <h3>Custom Integrations</h3>
+                            <p class="secondary-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                                im nesciunt assumenda voluptatibus cupiditate quasi possimus
+                                beatae?</p>
+                            <button class="secondary-button with-icon">
+                                Explore partners
+                                <img src="assets/arrow-right-blue.svg" alt="">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-right">
+                    <img src="assets/api-code.png" alt="" id="api-code">
+                    <img src="assets/terminal-code.png" alt="" id="terminal-code">
+                </div>
+            </div>
+        </div>
+
+        <!-- WHY SWIPE SECTION -->
+        <div class="why-swipe-section">
+            <div class="section-container">
+                <p class="subtitle">Why Swipe</p>
+                <h2>A tech-first approach to finance</h2>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="assets/cloud-icon.png" alt="" class="icon">
+                        <h3>Efficient Always</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sit
+                            necessitatibus,
+                            eligendi omnis fugiat at odio quibusdam et. Ipsam, pariatur nobis? Nostrum impedit fugit
+                            quis repellat placeat omnis. Veritatis, et.</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/cycle-icon.png" alt="" class="icon">
+                        <h3>Fast-improving</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ut,
+                            amet totam mollitia
+                            molestiae architecto magnam eveniet rerum, laudantium omnis dolorum dolore laborum nobis
+                            reprehenderit veritatis, accusamus perferendis aliquid ducimus.</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/shield-icon.png" alt="" class="icon">
+                        <h3>Tried and true</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sit
+                            necessitatibus,
+                            eligendi omnis fugiat at odio quibusdam et. Ipsam, pariatur nobis? Nostrum impedit fugit
+                            quis repellat placeat omnis. Veritatis, et.</p>
+                    </div>
+                    <div class="card">
+                        <img src="assets/bars-icon.png" alt="" class="icon">
+                        <h3>Crazy Optimized</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sit
+                            necessitatibus,
+                            eligendi omnis fugiat at odio quibusdam et. Ipsam, pariatur nobis? Nostrum impedit fugit
+                            quis repellat placeat omnis. Veritatis, et.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
