--- a/index.html
+++ b/index.html
@@ -67,30 +67,34 @@
             </div>
         </div>
         <!-- UNIFIED PLATFORM -->
-        <div class="unified-platform-section section-container">
-            <p class="subtitle">Unified platform</p>
-            <h2>All the payment products you'll ever need</h2>
+        <div class="unified-platform-section">
+            <div class="section-container">
+                <p class="subtitle">Unified platform</p>
+                <h2>All the payment products you'll ever need</h2>
 
-            <div class="two-column">
-                <div class="col-left">
-                    <p>We've got everything you'll need and more to build websites and apps that handle payments,
-                        payouts, and much more. Swipe’s products power payments for
-                        <a href="#">all kinds of retailers</a>, <a href="#">all kinds of
-                            businesses</a>, <a href="#">oftware platforms & marketplaces</a>, and everything in between.
-                    </p>
+                <div class="two-column">
+                    <div class="col-left">
+                        <p>We've got everything you'll need and more to build websites and apps that handle payments,
+                            payouts, and much more. Swipe’s products power payments for
+                            <a href="#">all kinds of retailers</a>, <a href="#">all kinds of
+                                businesses</a>, <a href="#">oftware platforms & marketplaces</a>, and everything in
+                            between.
+                        </p>
+                    </div>
+                    <div class="col-right">
+                        <p>We also help companies <a href="#">tackle fraud</a>, <a href="#">issue invoices</a>, <a
+                                href="#">send virtual</a> and <a href="#">physical cards</a>, <a href="#">manage
+                                financing</a>, <a href="#">wrangle business spend</a>, and much more.
+                        </p>
+                    </div>
                 </div>
-                <div class="col-right">
-                    <p>We also help companies <a href="#">tackle fraud</a>, <a href="#">issue invoices</a>, <a
-                            href="#">send virtual</a> and <a href="#">physical cards</a>, <a href="#">manage
-                            financing</a>, <a href="#">wrangle business spend</a>, and much more.
-                    </p>
-                </div>
+                <button class="primary-button with-icon">
+                    Start now
+                    <img src="assets/arrow-right-light.svg" alt="">
+                </button>
             </div>
-            <button class="primary-button with-icon">
-                Start now
-                <img src="assets/arrow-right-light.svg" alt="">
-            </button>
         </div>
+        <!-- GRAPHIC GRID SECTION -->
         <div class="graphic-section">
             <div class="section-container">
                 <div class="graphic-grid">
@@ -181,8 +185,83 @@
                         <h3>Crazy Optimized</h3>
                         <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sit
                             necessitatibus,
-                            eligendi omnis fugiat at odio quibusdam et. Ipsam, pariatur nobis? Nostrum impedit fugit
+                            eligendi omnis fugiat at odio quibusdam et. Ipsam, pariatur nobis? Nostrum aimpedit fugit
                             quis repellat placeat omnis. Veritatis, et.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="global-section">
+            <div class="section-container">
+                <div class="two-column">
+                    <div class="col-left">
+                        <p class="subtitle2">Global scale</p>
+                        <h2>A structure for global businesses</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi minima quia accusamus, in,
+                            doloribus quod eum eveniet impedit, velit necessitatibus et illo? Earum reiciendis, <a
+                                href="#">quis
+                                pariatur aliquam laborum dicta dolorem</a>.</p>
+                    </div>
+                    <div class="col-right">
+                        <img src="assets/global-graphic.png" alt="" id="globe">
+                    </div>
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <h3>250M+</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+                            amet?</p>
+                    </div>
+                    <div class="card">
+                        <h3>97%</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+                            amet?</p>
+                    </div>
+                    <div class="card">
+                        <h3>135+</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+                            amet?</p>
+                    </div>
+                    <div class="card">
+                        <h3>35+</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
+                            amet?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Virtual Events Sections -->
+        <div class="virtual-events-section">
+            <div class="section-container two-column">
+                <div class="col-left">
+                    <p class="subtitle">Virtual Events</p>
+                    <h2>Check out Sessions now!</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corporis facere vero ipsa
+                        necessitatibus eos sunt aut nesciunt voluptatibus mollitia consequatur animi ipsam quam sint
+                        provident, laudantium ullam earum accusantium.</p>
+                    <button class="primary-button with-icon">
+                        Start now
+                        <img src="assets/arrow-right-light.svg" alt="">
+                    </button>
+                </div>
+                <div class="col-right">
+                    <div class="swipe-sessions-card">
+                        <div class="card-top">
+                            <img src="assets/swipe-sessions.png" alt="">
+                            <div class="avatars">
+                                <img src="assets/avatar1.png" alt="">
+                                <img src="assets/avatar2.png" alt="">
+                            </div>
+                        </div>
+                        <div class="card-bottom">
+                            <div class="card-content">
+                                <p class="subtitle">Keynote</p>
+                                <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Saepe, rem.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
