--- a/index.html
+++ b/index.html
@@ -266,6 +266,94 @@
                 </div>
             </div>
         </div>
+
+        <!-- GETTING STARTED SECTION -->
+        <div class="getting-started-section">
+            <div class="section-container two-column">
+                <div class="col-left">
+                    <h2>What are you waiting for?</h2>
+                    <p>Lorem ipsum dolor <a href="#">Swipe</a> sit amet consectetur adipisicing elit. At vel ab quos,
+                        expedita dignissimos
+                        tempore dolores numquam fugit praesentium magni?</p>
+                    <button class="primary-button with-icon">
+                        Start now
+                        <img src="assets/arrow-right-light.svg" alt="">
+                    </button>
+                </div>
+                <div class="col-right">
+                    <div class="card">
+                        <img src="assets/shield-icon.png" alt="" class="icon">
+                        <h3>Always know what you pay</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id.
+                        </p>
+                        <button class="secondary-button with-icon">
+                            Pricing details
+                            <img src="assets/arrow-right-purple.svg" alt="">
+                        </button>
+                    </div>
+                    <div class="card">
+                        <img src="assets/bars-icon.png" alt="" class="icon">
+                        <h3>Start your integration</h3>
+                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id.
+                        </p>
+                        <button class="secondary-button with-icon">
+                            API reference
+                            <img src="assets/arrow-right-purple.svg" alt="">
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="section-container">
+                <div class="col">
+                    <img src="assets/logo-dark.svg" alt="" id="footer-logo">
+                    <div class="icon-link">
+                        <img src="assets/location-icon.png" alt="">
+                        <a href="#">United States</a>
+                    </div>
+                    <div class="icon-link">
+                        <img src="assets/comment-icon.png" alt="">
+                        <a href="#">English (United States)</a>
+                    </div>
+                </div>
+                <div class="col">
+                    <h3>Products</h3>
+                    <ul>
+                        <li><a href="#">Atlas</a></li>
+                        <li><a href="#">Billing</a></li>
+                        <li><a href="#">Invoicing</a></li>
+                        <li><a href="#">Payments</a></li>
+                        <li><a href="#">Checkout</a></li>
+                        <li><a href="#">Indentity</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Use Cases</h3>
+                    <ul>
+                        <li><a href="#">eCommerce</a></li>
+                        <li><a href="#">SaaS</a></li>
+                        <li><a href="#">Marketplace</a></li>
+                        <li><a href="#">Embeded Finance</a></li>
+                        <li><a href="#">Crypto</a></li>
+                        <li><a href="#">Creator Economy</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Resources</h3>
+                    <ul>
+                        <li><a href="#">Support Center</a></li>
+                        <li><a href="#">Guides</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Licenses</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Cookie Settings</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
