desktop view complete

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>Swipe</title>
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar">
-        <img src="assets/logo-white.svg" alt="Swipe, Inc.">
+        <img src="assets/logo-white.svg" alt="Swipe, inc.">
         <ul class="menu">
             <li><a href="#">Products</a></li>
             <li><a href="#">Solutions</a></li>
@@ -25,16 +25,20 @@
             <li><a href="#">Resources</a></li>
             <li><a href="#">Pricing</a></li>
         </ul>
+
         <button class="primary-button navbar-button">Sign In</button>
     </nav>
     <main>
+        <!-- GRADIENT BACKGROUND -->
+        <canvas id="gradient-canvas"></canvas>
+        <!-- Hero Section -->
         <div class="hero">
             <div class="section-container two-column">
                 <div class="col-left">
-                    <h1>Payment infrastructures for the world</h1>
-                    <p>Tons of companies all over the world use Swipe’s seamless platform to manage their businesses's
+                    <h1>Payments infrastructure for the world</h1>
+                    <p>
+                        Tons of companies all over the world use Swipe’s seamless platform to manage their businesses's
                         entire financial transaction infrastructure online.
-
                     </p>
                     <div class="button-container">
                         <button class="primary-button with-icon">
@@ -52,6 +56,7 @@
                 </div>
             </div>
         </div>
+        <!-- Partners Section -->
         <div class="partners-section">
             <div class="section-container">
                 <div class="partners-grid">
@@ -74,17 +79,23 @@
 
                 <div class="two-column">
                     <div class="col-left">
-                        <p>We've got everything you'll need and more to build websites and apps that handle payments,
-                            payouts, and much more. Swipe’s products power payments for
-                            <a href="#">all kinds of retailers</a>, <a href="#">all kinds of
-                                businesses</a>, <a href="#">oftware platforms & marketplaces</a>, and everything in
-                            between.
+                        <p>
+                            We've got everything you'll need and more to build websites and
+                            apps that handle payments, payouts, and much more. Swipe’s
+                            products power payments for
+                            <a href="#"> all kinds of retailers</a>,
+                            <a href="#"> all kinds of businesses</a>,
+                            <a href="#"> software platforms & marketplaces</a>, and
+                            everything in between.
                         </p>
                     </div>
                     <div class="col-right">
-                        <p>We also help companies <a href="#">tackle fraud</a>, <a href="#">issue invoices</a>, <a
-                                href="#">send virtual</a> and <a href="#">physical cards</a>, <a href="#">manage
-                                financing</a>, <a href="#">wrangle business spend</a>, and much more.
+                        <p>
+                            We also help companies
+                            <a href="#">tackle fraud</a>, <a href="#">issue invoices</a>,
+                            <a href="#">send virtual and physical cards</a>,
+                            <a href="#">manage financing</a>,
+                            <a href="#">wrangle business spend</a>, and much more.
                         </p>
                     </div>
                 </div>
@@ -105,26 +116,27 @@
                 </div>
             </div>
         </div>
-        <!-- Integration Section -->
+
+        <!-- INTEGRATIONS SECTION -->
         <div class="integrations-section">
             <div class="section-container two-column">
                 <div class="col-left">
-                    <p class="subtitle2">Design For Engineers</p>
-                    <h2>The world's best and most intuitive APIs</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, voluptatum dolore. Ipsum obcaecati
-                        fuga placeat, ex debitis ipsa voluptate laborum ea architecto quae nobis eum eos dicta veniam,
-                        omnis asperiores.</p>
+                    <p class="subtitle2">Designed For Engineers</p>
+                    <h2>The world’s best and most intuitive APIs</h2>
+                    <p>We abstract the hard stuff away so your teams don't can focus on building good technology,
+                        instead of spending time and money reinventing the wheel.</p>
 
                     <button class="primary-button with-icon">
                         Start now
                         <img src="assets/arrow-right-dark.svg" alt="">
                     </button>
+
                     <div class="card-container">
                         <div class="card">
                             <img src="assets/tools-icon.png" alt="" class="icon">
                             <h3>Tools for all stacks</h3>
-                            <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quasi
-                                nesciunt ipsum voluptatum numquam animi nisi cumque, illo sed ea?</p>
+                            <p class="secondary-text">We offer front end and back end libraries in some of the most
+                                widely used technologies, old and new.</p>
                             <button class="secondary-button with-icon">
                                 See libraries
                                 <img src="assets/arrow-right-blue.svg" alt="">
@@ -133,9 +145,8 @@
                         <div class="card">
                             <img src="assets/cube-icon.png" alt="" class="icon">
                             <h3>Custom Integrations</h3>
-                            <p class="secondary-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe
-                                im nesciunt assumenda voluptatibus cupiditate quasi possimus
-                                beatae?</p>
+                            <p class="secondary-text">Use integrations for systems like Shopify, WooCommerce, NetSuite,
+                                and more.</p>
                             <button class="secondary-button with-icon">
                                 Explore partners
                                 <img src="assets/arrow-right-blue.svg" alt="">
@@ -159,34 +170,34 @@
                     <div class="card">
                         <img src="assets/cloud-icon.png" alt="" class="icon">
                         <h3>Efficient Always</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sit
-                            necessitatibus,
-                            eligendi omnis fugiat at odio quibusdam et. Ipsam, pariatur nobis? Nostrum impedit fugit
-                            quis repellat placeat omnis. Veritatis, et.</p>
+                        <p class="secondary-text">
+                            We've optimized every level of the finance stack, from integrations to prebuilt checkout
+                            flows - no detail has been spared.
+                        </p>
                     </div>
                     <div class="card">
                         <img src="assets/cycle-icon.png" alt="" class="icon">
-                        <h3>Fast-improving</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ut,
-                            amet totam mollitia
-                            molestiae architecto magnam eveniet rerum, laudantium omnis dolorum dolore laborum nobis
-                            reprehenderit veritatis, accusamus perferendis aliquid ducimus.</p>
+                        <h3>Fast-Improving</h3>
+                        <p class="secondary-text">
+                            We make constant updates and improvements to help you stay on the cutting edge of your
+                            industry, deploying to production around 20X per day!
+                        </p>
                     </div>
                     <div class="card">
                         <img src="assets/shield-icon.png" alt="" class="icon">
                         <h3>Tried and true</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sit
-                            necessitatibus,
-                            eligendi omnis fugiat at odio quibusdam et. Ipsam, pariatur nobis? Nostrum impedit fugit
-                            quis repellat placeat omnis. Veritatis, et.</p>
+                        <p class="secondary-text">
+                            Our systems operate with 100% uptime, with scalability and uptime as a guarantee. Swipe is
+                            super duper certified so don't worry
+                        </p>
                     </div>
                     <div class="card">
                         <img src="assets/bars-icon.png" alt="" class="icon">
                         <h3>Crazy Optimized</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sit
-                            necessitatibus,
-                            eligendi omnis fugiat at odio quibusdam et. Ipsam, pariatur nobis? Nostrum aimpedit fugit
-                            quis repellat placeat omnis. Veritatis, et.</p>
+                        <p class="secondary-text">
+                            We use machine learning trained on billions of data points to help optimize all products,
+                            from fraud to revenue recovery and more.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -198,52 +209,47 @@
                     <div class="col-left">
                         <p class="subtitle2">Global scale</p>
                         <h2>A structure for global businesses</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi minima quia accusamus, in,
-                            doloribus quod eum eveniet impedit, velit necessitatibus et illo? Earum reiciendis, <a
-                                href="#">quis
-                                pariatur aliquam laborum dicta dolorem</a>.</p>
+                        <p>Swipe makes moving money simple, borderless, and programmable - just like the rest of the
+                            internet. We have teams all over the world and we process billions and billions of dollars
+                            yearly for <a href="#">startups, Fortune 500s, and everything in between.</a></p>
                     </div>
                     <div class="col-right">
-                        <img src="assets/global-graphic.png" alt="" id="globe">
+                        <img id="globe" src="assets/global-graphic.png" alt="">
                     </div>
                 </div>
                 <div class="card-container">
                     <div class="card">
                         <h3>250M+</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-                            amet?</p>
+                        <p class="secondary-text">API requests each day, peaking at 15,000 requests a second.</p>
                     </div>
                     <div class="card">
                         <h3>97%</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-                            amet?</p>
+                        <p class="secondary-text">of US adults have bought from businesses that use Swipe</p>
                     </div>
                     <div class="card">
                         <h3>135+</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-                            amet?</p>
+                        <p class="secondary-text">currencies and payment methods supported</p>
                     </div>
                     <div class="card">
                         <h3>35+</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat,
-                            amet?</p>
+                        <p class="secondary-text">countries with local, acquiring, optimizing acceptance rates</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Virtual Events Sections -->
+        <!-- Virtual Events Section -->
         <div class="virtual-events-section">
             <div class="section-container two-column">
                 <div class="col-left">
-                    <p class="subtitle">Virtual Events</p>
+                    <p class="subtitle">Virtual events</p>
                     <h2>Check out Sessions now!</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem corporis facere vero ipsa
-                        necessitatibus eos sunt aut nesciunt voluptatibus mollitia consequatur animi ipsam quam sint
-                        provident, laudantium ullam earum accusantium.</p>
+                    <p>Swipe Sessions is our annual conference - it's now available to watch on demand! Check it out and
+                        become an "internet economy" genius, and see how Swipe can transform the way you do business
+                        online.</p>
                     <button class="primary-button with-icon">
                         Start now
-                        <img src="assets/arrow-right-light.svg" alt="">
+                        <img src="assets/arrow-right-light.svg">
                     </button>
                 </div>
                 <div class="col-right">
@@ -258,8 +264,7 @@
                         <div class="card-bottom">
                             <div class="card-content">
                                 <p class="subtitle">Keynote</p>
-                                <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Saepe, rem.</p>
+                                <p class="secondary-text">Everything you need to know about the internet economy</p>
                             </div>
                         </div>
                     </div>
@@ -272,9 +277,8 @@
             <div class="section-container two-column">
                 <div class="col-left">
                     <h2>What are you waiting for?</h2>
-                    <p>Lorem ipsum dolor <a href="#">Swipe</a> sit amet consectetur adipisicing elit. At vel ab quos,
-                        expedita dignissimos
-                        tempore dolores numquam fugit praesentium magni?</p>
+                    <p>Explore <a href="#">Swipe</a> now, or create an account and start accepting payments today! If
+                        you need a custom package for your business, let's chat today.</p>
                     <button class="primary-button with-icon">
                         Start now
                         <img src="assets/arrow-right-light.svg" alt="">
@@ -284,8 +288,8 @@
                     <div class="card">
                         <img src="assets/shield-icon.png" alt="" class="icon">
                         <h3>Always know what you pay</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id.
-                        </p>
+                        <p class="secondary-text">Integrated per-transaction pricing with no hidden fees.</p>
+
                         <button class="secondary-button with-icon">
                             Pricing details
                             <img src="assets/arrow-right-purple.svg" alt="">
@@ -294,17 +298,17 @@
                     <div class="card">
                         <img src="assets/bars-icon.png" alt="" class="icon">
                         <h3>Start your integration</h3>
-                        <p class="secondary-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, id.
-                        </p>
+                        <p class="secondary-text">Get up and running with Stripe in as little as 10 minutes.</p>
+
                         <button class="secondary-button with-icon">
                             API reference
                             <img src="assets/arrow-right-purple.svg" alt="">
                         </button>
                     </div>
                 </div>
+
             </div>
         </div>
-
 
         <footer class="footer">
             <div class="section-container">
@@ -327,7 +331,7 @@
                         <li><a href="#">Invoicing</a></li>
                         <li><a href="#">Payments</a></li>
                         <li><a href="#">Checkout</a></li>
-                        <li><a href="#">Indentity</a></li>
+                        <li><a href="#">Identity</a></li>
                     </ul>
                 </div>
                 <div class="col">
@@ -336,7 +340,7 @@
                         <li><a href="#">eCommerce</a></li>
                         <li><a href="#">SaaS</a></li>
                         <li><a href="#">Marketplace</a></li>
-                        <li><a href="#">Embeded Finance</a></li>
+                        <li><a href="#">Embedded Finance</a></li>
                         <li><a href="#">Crypto</a></li>
                         <li><a href="#">Creator Economy</a></li>
                     </ul>
@@ -348,14 +352,18 @@
                         <li><a href="#">Guides</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Licenses</a></li>
-                        <li><a href="#">Privacy</a></li>
-                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Privacy & Terms</a></li>
                         <li><a href="#">Cookie Settings</a></li>
                     </ul>
                 </div>
             </div>
+
         </footer>
+
     </main>
+
+
+    <script src="gradient.js"></script>
 </body>
 
 </html>
